Cleaning up folders

--- a/JavaScript/JS Environment/TestCode.html
+++ b/JavaScript/JS Environment/TestCode.html
@@ -6,7 +6,11 @@
 
   <body>
     <h2> Hello world </h2>
-    <input type="submit" value="submit" name="sub-button" onclick=helloFunction() />
+    <div>
+	    <input type="submit" value="Test" name="sub-button" onclick=helloFunction() />
+	    <input type="submit" value="Run main" name="main-button" onclick=main() />
+	    <input type="submit" value="DateTime" name="date-button" onclick=formatDateTime(0) />
+	</div>
   </body>
 
 </html>
